# microcontrollers

.cache/clangd/index/: main.cpp.0A72E2F78D4AA7CE.idx  main.cpp.BC81D4C0DBA32790.idx
esp32_i2s_microphone_passthrough/: .gitignore  CMakeLists.txt
esp32_water_bucket_controller/: .gitignore  README.md  sdkconfig
esp32_water_bucket_controller/main/: CMakeLists.txt  gpio.c  level.c  log_tcp.c  main.cpp  mqtt.c  priv.h  pump.c  wb_config.h.example  wifi.c
esp32_water_bucket_controller_v2/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
esp32_water_bucket_controller_v2/main/: CMakeLists.txt  gpio.c  idf_component.yml  lcd.c  level.c  log_tcp.c  main.cpp  mqtt.c  ota.c  priv.h  pump.c  rotary_encoder.c  ui_test.c  wb_config.h.example  wifi.c
esp32_water_bucket_controller_v2/main/ui/: ui.c  ui.h  ui_log.c  ui_pages.c  ui_pages_internal.h  ui_render.c  ui_tz.c  ui_tz.h
esp32_water_bucket_controller_v2/main/ui/pages/: home_page.c  logs_page.c  pumps_page.c  sensors_page.c  settings_page.c
main/: CMakeLists.txt  main.cpp
